--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -2,7 +2,7 @@ $primary-color: #444;
 $secondary-color: #eece1a;
 $show-home-image: true;
 $home-image: url(../img/background.jpg);
-$background-opacity: 0.9;
+$background-opacity: 0.4;
 
 @mixin easeOut {
   transition: all 0.9s ease-out;
@@ -10,7 +10,7 @@ $background-opacity: 0.9;
 
 @mixin background {
   @if $show-home-image {
-    &#bg-image {
+    &#bg-img {
       background: $home-image;
       background-attachment: fixed;
       background-size: cover;
